syntax = "proto3";
package hello;

import "google/api/annotations.proto";

service HelloApi {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/v1/hello"
            body: "*"
        };
    }
    rpc GetMessages (GetMessagesRequest) returns (GetMessagesReply) {
        option (google.api.http) = {
            get: "/v1/messages"
        };
    }
}

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}

message GetMessagesRequest {
    string topic = 1;
    int32 limit = 2;
}

message GetMessagesReply {
    repeated Message messages = 1;
}

message Message {
    int32 id = 1;
    string topic = 2;
    int32 part = 3;
    int64 kafkaoffset = 4;
    string payload = 5;
    string created_at = 6;
}
